Sat Nov 23 17:43:16 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/unittests/rpc.c: return 0 if not TDS7+
	+ src/tds/token.c: reuse code, save extended errors in param_info

Sat Nov 23 15:11:09 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/token.c: 
	- fix bug introduced token.c (output parameters not saved correctly)

Sat Nov 23 14:54:15 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/rpc.c: remove warnings

Sat Nov 23 14:44:53 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/ctlib/ct.c src/odbc/odbc.c src/tds/query.c:
	* src/tds/token.c src/tds/unittests/dynamic1.c:
	- tds_submit_prepare return allocated TDSDYNAMIC structure
	- add tds_set_column_type to set column type and calc dependency fields
	- fix discard of PARAMFMT/PARAMS token in TDS5

Sat Nov 23 10:42:12 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/query.c: some comment and fix for numeric parameters

Sat Nov 23 01:32:44 EST 2002	JK Lowden <jklowden@schemamania.org>
	* include/sybdb.h src/dblib/rpc.c src/dblib/unittests/rpc.c
	- more db-lib rpc preparation

Fri Nov 22 17:48:03 EST 2002	JK Lowden <jklowden@schemamania.org>
	* src/dblib/unittests/rpc.c src/dblib/unittests/Makefile.am
	- new unittest for as-yet nonfunctional dbrpc* functions
	
Fri Nov 22 23:10:38 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/query.c src/tds/unittests/dynamic1.c:
	- fix a BUG constructing prepare query for TDS7+
	- fix test for TDS7+

Fri Nov 22 22:30:43 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/token.c src/tds/unittests/dynamic1.c:
	- fix error handling PARAMFMT (row not allocated)
	- fix test (read prepare results)

Fri Nov 22 17:41:47 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* doc/userguide.sgml: update for ODBC

Fri Nov 22 16:39:53 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/common.c src/odbc/unittests/connect.c: