@@ -17,7 +17,7 @@
 
 #include "common.h"
 
-static char software_version[] = "$Id: t0014.c,v 1.16 2002-11-20 13:47:06 freddy77 Exp $";
+static char software_version[] = "$Id: t0014.c,v 1.17 2002-11-23 17:10:59 freddy77 Exp $";
 static void *no_unused_var_warn[] = { software_version, no_unused_var_warn };
 
 #define BLOB_BLOCK_SIZE 4096
@@ -27,7 +27,7 @@ int failed = 0;
 const char *testargs[] = { "", FREETDS_SRCDIR "/data.bin", "t0014.out" };
 
 int
-main(int argc, char *argv[])
+main(int argc, const char *argv[])
 {
 	const int rows_to_add = 3;
 	LOGINREC *login;
