@@ -14,7 +14,7 @@
 
 #include "common.h"
 
-static char software_version[] = "$Id: common.c,v 1.9 2002-11-22 15:40:17 freddy77 Exp $";
+static char software_version[] = "$Id: common.c,v 1.10 2002-11-23 17:11:00 freddy77 Exp $";
 static void *no_unused_var_warn[] = { software_version, no_unused_var_warn };
 
 HENV Environment;
@@ -156,7 +156,7 @@ void
 Command(HSTMT stmt, const char *command)
 {
 	printf("%s\n", command);
-	if (SQLExecDirect(stmt, (const SQLCHAR *) command, SQL_NTS)
+	if (SQLExecDirect(stmt, (SQLCHAR *) command, SQL_NTS)
 	    != SQL_SUCCESS) {
 		printf("Unable to execute statement\n");
 		CheckReturn();
