@@ -1,3 +1,12 @@
+Sat Nov 23 18:10:32 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
+	* src/dblib/bcp.c src/dblib/unittests/rpc.c:
+	* src/dblib/unittests/t0013.c src/dblib/unittests/t0014.c:
+	* src/dblib/unittests/t0016.c src/dblib/unittests/t0017.c:
+	* src/dblib/unittests/t0021.c src/dblib/unittests/t0022.c:
+	* src/odbc/odbc.c src/odbc/unittests/common.c:
+	* src/odbc/unittests/connect.c:
+	- remove some warnings
+
 Sat Nov 23 17:43:16 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
 	* src/dblib/unittests/rpc.c: return 0 if not TDS7+
 	+ src/tds/token.c: reuse code, save extended errors in param_info
